data/forge_javadoc/1.7.10/processed/net_minecraft_command_PlayerSelector.md
# PlayerSelector

**Inheritance:** java.lang.Object → net.minecraft.command.PlayerSelector

## Class signature

```java
public class PlayerSelector extends java.lang.Object
```

## Constructors

- `PlayerSelector()`

## Methods

- `static IChatComponent func_150869_b(ICommandSender p_150869_0_, java.lang.String p_150869_1_)`
- `static java.util.Map func_96560_a(java.util.Map p_96560_0_)`
- `static boolean hasArguments(java.lang.String p_82378_0_)`
- `static boolean hasTheseArguments(java.lang.String p_82383_0_, java.lang.String p_82383_1_)`
- `static boolean matchesMultiplePlayers(java.lang.String p_82377_0_)`
- `static EntityPlayerMP matchOnePlayer(ICommandSender p_82386_0_, java.lang.String p_82386_1_)`
- `static EntityPlayerMP [] matchPlayers(ICommandSender p_82380_0_, java.lang.String p_82380_1_)`